<resources>
    <string name="app_name">VIGIA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="FACEBOOK_APP_ID">2130448207243882</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">a1bf8a18c3f6ccd024d4cb8505747f8c</string>


    <string name="home_item">Inicio</string>
    <string name="incidencias_item">Incidencias</string>
    <string name="reportes_item">Reportes </string>
    <string name="solicitudes_item">Solicitud de auxilio</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>
    <string name="Register">Registro</string>

</resources>
