<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!-- Sección de Menu -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_solicitudes"
            android:icon="@drawable/ic_file_document"
            android:tint="@color/colorPrimary"
            android:iconTint="@color/colorPrimary"

            android:title="@string/solicitudes_item" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_file_document"
            android:title="@string/reportes_item" />
        <item
            android:id="@+id/nav_incidencias"
            android:icon="@drawable/ic_file_document"
            android:title="@string/incidencias_item" />

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>
